// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested google/api/expr/v1alpha1/checked 1`] = `
Object {
  "amino": Object {},
  "proto": Object {
    "Long": true,
    "isSet": true,
  },
}
`;

exports[`services osmosis/gamm/v1beta1/tx 1`] = `
Object {
  "amino": Object {
    "AminoMsg": true,
  },
  "proto": Object {
    "Long": true,
    "isSet": true,
  },
}
`;

exports[`services osmosis/lockup/tx 1`] = `
Object {
  "amino": Object {
    "AminoMsg": true,
  },
  "proto": Object {
    "Long": true,
    "fromDuration": true,
    "isSet": true,
    "toDuration": true,
  },
}
`;

exports[`utils cosmos/staking/v1beta1/tx 1`] = `
Object {
  "amino": Object {
    "AminoMsg": true,
    "decodeBech32Pubkey": true,
    "encodeBech32PubKey": true,
    "fromBase64": true,
    "toBase64": true,
  },
  "proto": Object {
    "fromJsonTimestamp": true,
    "fromTimestamp": true,
    "isSet": true,
    "toTimestamp": true,
  },
}
`;
